--- a/Section1.ipynb
+++ b/Section1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,14 +14,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-15.895884814691753\n"
+      "-16.169150556757792\n"
      ]
     }
    ],
@@ -43,7 +43,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-0.5155565 , -0.01585135], dtype=float32)"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "env.observation_space.sample() "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -57,13 +77,13 @@
       "  * https://github.com/tensorflow/addons\n",
       "If you depend on functionality not listed there, please file an issue.\n",
       "\n",
-      "WARNING:tensorflow:From C:\\Users\\Eli Simhayev\\Workspace\\Transfer-Learning-In-RL\\ac_copy.py:33: dense (from tensorflow.python.layers.core) is deprecated and will be removed in a future version.\n",
+      "WARNING:tensorflow:From C:\\Users\\Eli Simhayev\\Workspace\\Transfer-Learning-In-RL\\ac_copy.py:34: dense (from tensorflow.python.layers.core) is deprecated and will be removed in a future version.\n",
       "Instructions for updating:\n",
       "Use keras.layers.dense instead.\n",
       "WARNING:tensorflow:From C:\\Users\\Eli Simhayev\\Anaconda3\\envs\\dlinto\\lib\\site-packages\\tensorflow\\python\\framework\\op_def_library.py:263: colocate_with (from tensorflow.python.framework.ops) is deprecated and will be removed in a future version.\n",
       "Instructions for updating:\n",
       "Colocations handled automatically by placer.\n",
-      "WARNING:tensorflow:From C:\\Users\\Eli Simhayev\\Workspace\\Transfer-Learning-In-RL\\ac_copy.py:38: Normal.__init__ (from tensorflow.python.ops.distributions.normal) is deprecated and will be removed after 2019-01-01.\n",
+      "WARNING:tensorflow:From C:\\Users\\Eli Simhayev\\Workspace\\Transfer-Learning-In-RL\\ac_copy.py:39: Normal.__init__ (from tensorflow.python.ops.distributions.normal) is deprecated and will be removed after 2019-01-01.\n",
       "Instructions for updating:\n",
       "The TensorFlow Distributions library has moved to TensorFlow Probability (https://github.com/tensorflow/probability). You should update all references to use `tfp.distributions` instead of `tf.distributions`.\n",
       "WARNING:tensorflow:From C:\\Users\\Eli Simhayev\\Anaconda3\\envs\\dlinto\\lib\\site-packages\\tensorflow\\python\\ops\\distributions\\normal.py:160: Distribution.__init__ (from tensorflow.python.ops.distributions.distribution) is deprecated and will be removed after 2019-01-01.\n",
